--- a/src/app/person-center/component/album/water-mark/water-mark.component.css
+++ b/src/app/person-center/component/album/water-mark/water-mark.component.css
@@ -1,7 +1,9 @@
+/*整体*/
 .water-mark-main{
   width: 750px;
   height: 500px;
 }
+/*标题*/
 .water-mark-title{
   padding: 10px;
   border-bottom: 1px solid rgb(223,223,223);
@@ -9,4 +11,85 @@
 }
 .water-mark-title i{
   margin-right: 5px;
+}
+/*关闭按钮*/
+.close-water-mark{
+  float: right;
+}
+/*正体*/
+.water-mark-center{
+  height: 400px;
+  border-bottom:  solid 1px rgb(233,233,233);
+}
+/*预览相片*/
+.water-mark-viewer{
+  width: 500px;
+  height: 400px;
+  float: left;
+  border-right:  solid 1px rgb(233,233,233);
+
+}
+/*包裹当前正在显示的相片div*/
+.current-photo-wrapper{
+  width: 480px;
+  height: 330px;
+  margin-top: 10px;
+  margin-left: 10px;
+  overflow: hidden;
+  position: relative;
+}
+/*当前正在显示的照片*/
+.current-photo{
+  margin: auto;
+  display: block;
+}
+/*操作相片预览*/
+.view-photo-operation{
+  padding-top: 10px;
+  padding-right: 10px;
+  height: 50px;
+}
+.water-mark-viewer button{
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+/*切换视图的按钮*/
+.view-photo-toggle{
+  float: right;
+margin-top: 10px;
+}
+/*设置水印*/
+.water-mark-setting{
+  float: right;
+  width: 240px;
+  height: 400px;
+
+}
+/*选择样式的label*/
+.select-style-label{
+  margin-top: 10px;
+  font-size: 13px;
+  color: rgb(100,100,100);
+}
+/*水印*/
+.water-mark-style{
+  height: 70px;
+  width: 230px;
+  margin-top: 10px;
+  background: rgb(241,241,241);
+  padding-left: 10px;
+  cursor: pointer;
+}
+.water-logo{
+  height: 45px;
+  margin-top: 15px;
+  margin-right: 10px;
+  float: left;
+}
+.logo-text{
+  color: rgb(196,196,196);
+  font-size: 17px;
+  font-weight: bold;
+  margin-top: 23px;
+  float: left;
 }
