--- a/src/app/person-center/component/album/water-mark/water-mark.component.html
+++ b/src/app/person-center/component/album/water-mark/water-mark.component.html
@@ -1,5 +1,41 @@
 <main class="water-mark-main">
+  <!--标题-->
   <div class="water-mark-title">
-    <i class="material-icons">gradient</i>设置水印
+    <i class="material-icons">gradient</i>设置水印(批量)
+    <i class="material-icons close-water-mark">close</i>
   </div>
+
+  <!--正体开始-->
+  <div class="water-mark-center">
+
+    <!--预览水印照片-->
+    <div class="water-mark-viewer">
+      <div class="current-photo-wrapper">
+        <img class="current-photo" [src]="api.IMAGE_PREFIX+photo.path+zoomArgs+waterMarkArgs+base64UrlName+fontSize">
+      </div>
+
+      <div class="view-photo-operation">
+        <button md-raised-button >上一张</button>
+        <button md-raised-button >下一张</button>
+        <md-slide-toggle
+          class="view-photo-toggle"
+          [checked]="waterMarkView"
+          (change)="toggleView($event)"
+          color=primary>
+          水印视角
+        </md-slide-toggle>
+      </div>
+
+    </div>
+
+    <!--设置水印-->
+    <div class="water-mark-setting">
+      <p class="select-style-label">选择样式</p>
+      <div class="water-mark-style">
+        <img class="water-logo" src="assets/img/water-logo.png">
+        <p class="logo-text">红果情侣</p>
+      </div>
+    </div>
+  </div>
+  <!--整体结束-->
 </main>
